# spark-minio-iceberg-on-docker

./: LICENSE  README.md  docker-compose.yml  pyproject.toml
src/: app.py
