[tool.poetry]
name = "spark-minio-iceberg-on-docker"
version = "0.1.0"
description = "Provisionamento de cluster Spark com MinIO e Apache Iceberg utilizando Docker Compose para aprendizado."
authors = ["Edeilson David <edeilson.david@gmail.com>"]
license = "MIT License"
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "3.11"
pyspark = "3.5.1"
minio = "7.2.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
